fix overflow html tag

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -8,7 +8,6 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
     line-height: 2rem;
-    overflow: hidden;
 }
 
 body {
