--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -9,6 +9,8 @@
     background-position: right;
 
     .hero-content {
+        margin-bottom: 200px;
+
         &__title {
             font-size: 5.6rem;
             line-height: 5.6rem;
